<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.millo.relaxing.FragmentAbout"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="horizontal"
        android:background="@android:color/transparent"
        android:padding="10dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:id="@+id/btBack"
            android:text="@string/back"
            android:enabled="true"
            android:textSize="20sp"
            android:textColor="#FFFFFFFF"
            android:padding="0dp"
            />

        <TextView
            android:id="@+id/tvLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.40"
            android:text="@string/settings"
            android:padding="15dp"
            />

        <Button
            android:id="@+id/btEmpty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:text="Empty"
            android:visibility="invisible"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:padding="10dp">
    <Button
        android:id="@+id/btnFeedback"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/main_feedback" />

    <TextView
        android:id="@+id/tvCredits"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:linksClickable="true"
        android:text="@string/main_credits"
        android:textColor="@color/white"
        android:textSize="12sp" />

    </LinearLayout>
</LinearLayout>
