<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tvMainInstalled"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}" 
    android:background="@color/color3"
    >

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
	android:layout_margin="10dp"
	android:background="@color/color2"
        >
    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_installed"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center"
        android:padding="10dp"
        android:background="@color/color1"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvExplain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_explain"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="center"
        android:layout_margin="10dp"
         />
    
    <TextView
        android:id="@+id/tvIpAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:layout_margin="10dp" />
    
    </LinearLayout>

</LinearLayout>
