<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.millo.abcshare.FragmentHome"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:layout_gravity="center|center_vertical"
            android:gravity="center|center_vertical"
            >

            <ImageView
                android:id="@+id/ivServerOnOff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:src="@drawable/server_off"
                />

            <ImageView
                android:id="@+id/ivNfcOnOff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:src="@drawable/nfc_off"
                />

            <!--Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:id="@+id/btBack"
                android:text="@string/back"
                android:enabled="true"
                android:textSize="20sp"
                android:textColor="#FFFFFFFF"
                android:padding="0dp"
                android:visibility="invisible"
                /-->

            <TextView
                android:id="@+id/tvLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:layout_gravity="center|center_vertical"
                android:gravity="center|center_vertical"
                android:text="@string/home"
                android:textSize="20sp"
                android:padding="5dp"
                android:visibility="invisible"
                />

            <Button
                android:id="@+id/btEmpty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/settings"
                android:layout_gravity="center|center_vertical"
                android:gravity="center|center_vertical"
                />

        </LinearLayout>


        <!--TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:background="@drawable/title_layer"
            android:text="@string/main_installed"
            android:textColor="@color/white"
            android:textSize="14sp" /-->

        <!--TextView
            android:id="@+id/tvExplain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/main_explain"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvTroubles"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/main_troubles"
            android:textColor="@color/white"
            android:textSize="12sp" /-->

        <TextView
            android:id="@+id/tvURI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:autoLink="none"
            android:gravity="center|center_vertical"
            android:text="@string/hello_world"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:padding="10dp"
            android:background="@color/color1"
            />

        <TextView
            android:id="@+id/tvServing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:autoLink="none"
            android:gravity="center"
            android:text="Serving none"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:padding="5dp"
            />

        <TextView
            android:id="@+id/tvData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:autoLink="none"
            android:gravity="center"
            android:text="Waiting for Data..."
            android:textColor="@color/white"
            android:textSize="18sp"
            android:padding="5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center" >

                <TextView
                    android:id="@+id/tvWebServerStarted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/status_server"
                    android:textColor="@color/darkgrey" />

                <ImageView
                    android:id="@+id/ivWebServerStarted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvWebServerStarted"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/status_server"
                    android:src="@drawable/led_red"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center" >

                <TextView
                    android:id="@+id/tvWebServerConnected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/status_connect"
                    android:textColor="@color/darkgrey" />

                <ImageView
                    android:id="@+id/ivWebServerConnected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvWebServerConnected"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/status_connect"
                    android:src="@drawable/led_red" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center" >

                <TextView
                    android:id="@+id/tvNFC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/status_nfc"
                    android:textColor="@color/darkgrey" />

                <ImageView
                    android:id="@+id/ivNfc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvNFC"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/ivNfc"
                    android:src="@drawable/led_red" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center" >

                <TextView
                    android:id="@+id/tvShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/status_a"
                    android:textColor="@color/darkgrey" />

                <ImageView
                    android:id="@+id/ivShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvShare"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/status_a"
                    android:src="@drawable/button_share" />
            </RelativeLayout>
        </LinearLayout>

            <ImageView
                android:id="@+id/ivBarcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/qr_code" />

</LinearLayout>